--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <audio id="bg-music" loop>
-        <source src="placeholder-music.mp3" type="audio/mp3"> <!-- Replace with actual music -->
+        <source src="ROSÉ - number one girl (official music video).mp3" type="audio/m"> <!-- Replace with actual music -->
     </audio>
 
     <div class="content">
