--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nick and Amrita - Ultimate Peachy Quiz</title>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <audio id="bg-music" loop>
-        <source src="ROSÉ - number one girl (official music video).mp3" type="audio/m"> <!-- Replace with actual music -->
+        <source src="placeholder-music.mp3" type="audio/mp3"> <!-- Replace with actual music -->
     </audio>
 
     <div class="content">
